# gproc

./: .buildinfo  .gitignore  ENV.yml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: pylint.yml  sphinx.yml
_sources/: index.rst.txt
docs/: conf.py  index.rst
doctrees/: environment.pickle  index.doctree
html/: .buildinfo  search.html  searchindex.js
notebooks/: BLR.stan  Bayesian-Logisitc-Regression.ipynb  Elliptic_Slice_Sampling.ipynb  Expectation Propagation.ipynb  Full-Bayesian-Logisitc-Regression-Example.ipynb  Joint-Posterior-Sampling.ipynb  Kernel Examples.ipynb  Metropolis-Hastings.ipynb  Metrpolis-Hastings.ipynb  Pipeline.ipynb  Prediction.ipynb  Pseudo-Marginal-Importance-Sampling.ipynb  Real-Data-Loading.ipynb  Toy-Data-Generation.ipynb  Type2-Classification-Example.ipynb
src/cpp/ellss/: ell_ss.cpp  normal.h
src/cpp/example/: main.cpp
src/cpp/sampling/: main.cpp
src/gproc/: approx_marginal_is.py  classifiers.py  cross_validation.py  elliptic.py  elliptic_cpp.py  example_c.py  expectation_propagation.py  generative.py  joint_sampler.py  kernels.py  laplace.py  load_data.py  metrics.py  metropolis-hastings.py  metropolis_hastings.py  plotting.py  posterior_sampling.py  predictive_sampling.py  pseudo_marginal_prediction.py  run_pipeline.py
tests/: test_kernels.py
