[metadata]
name = gproc
version = 0.0.1
author = Tennessee Hickling, Dominic Broadbent, Edward Milson
author_email = tennessee.wallaceh@gmail.com
description = A package for peforming Gaussian Process Classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tennessee-Wallaceh/gproc
project_urls =
    Bug Tracker = https://github.com/Tennessee-Wallaceh/gproc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src